# BoW-examples

./: CMakeLists.txt  README  README~
data/: descriptor.yml  dictionary.yml
include/: TemplatedLoopDetector.h  TemplatedVocabulary.h
src/: BoFSIFT.cpp  BoFSIFT.cpp~  CMakeLists.txt  CMakeLists.txt~  DBoW2_demo.cpp  ba.cpp~  gicp_demo.cpp~
src/loopdetector/: demoDetector.h  demo_brief.cpp  demo_surf.cpp
